# fixing-broken-windows-with-renovate

./: .gitignore  Dockerfile  README.md  renovate.json
backend/: pyproject.toml
charts/postgresql/: Chart.yaml  values.yaml
frontend/: package.json
infra/: main.tf
