[project]
name = "backend"
version = "0.1.0"
description = "Example Python backend for Renovate demo"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.21.0",
    "pydantic==1.10.7",
    "requests==2.28.0",
    "sqlalchemy==1.4.46",
    "alembic==1.9.0",
    "psycopg2-binary==2.9.5",
    "python-dotenv==0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
